Thu Jul  8 19:12:14 CEST 2004 (tk)
----------------------------------
  * libclamav: read .db3 files from cvd

Thu Jul  8 15:39:29 CEST 2004 (tk)
----------------------------------
  * libclamav: extend engine to support character alternatives (a|b|..|z)
	       and distance limits in multipattern signatures (exact: {n}
	       and variable: {n-} (n or more), {-n} (n or less), {n1-n2}
	       (n1, n2 or between them))

Wed Jul  7 02:17:00 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: Improve UPX detection (thanks to aCaB). Ignore old "ZM"
		   DOS executables (thanks to Pierre <pierrezero*fastmail.fm>)

Tue Jul  6 17:46:39 CEST 2004 (tk)
----------------------------------
  * libclamav: disable quoted-printable decoder in HTML normaliser

Tue Jul  6 17:19:15 CEST 2004 (tk)
----------------------------------
  * libclamav: improve HTML detection

Tue Jul  6 16:37:34 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: fix sanity check on uninitialised data (bug found by aCaB)

Tue Jul  6 14:26:19 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: remove unused PowerPoint functions.
  * libclamav/ole2_extract.c: cleanup some warnings. Apply patch for
	clean 64bit compile (originally from Martin Brulisauer)

Tue Jul  6 15:15:18 CEST 2004 (tk)
----------------------------------
  * configure: improve libmilter test (patch by Tom G. Christensen
	       <tgc*statsbiblioteket.dk>)

Tue Jul  6 10:37:15 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of Gibe.3 boundary exploit improves
		the speed of scanning other emails

Tue Jul  6 04:22:02 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: optimise UPX recognition. Respect archive limits.

Tue Jul  6 01:46:41 CEST 2004 (tk)
----------------------------------
  * libclamav: pe, upx: add big-endian support
  * libclamav: activate PE and UPX code (new scan option CL_PE). UPX code