@@ -1,3 +1,10 @@
+Thu Jul  8 23:23:34 BST 2004 (njh)
+----------------------------------
+  * clamav-milter:	Validate arguments given to inet_ntop. This
+		is needed for machines that can't always get hostnames
+		right, presumably broken hosts file or DNS or possibly
+		connecting to sendmail incorrectly
+
 Thu Jul  8 19:12:14 CEST 2004 (tk)
 ----------------------------------
   * libclamav: read .db3 files from cvd
